--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@vue-leaflet/vue-leaflet": "^0.6.0",
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
         "jquery": "^3.6",
@@ -20,5 +21,8 @@
         "resolve-url-loader": "^3.1.3",
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1"
+    },
+    "dependencies": {
+        "leaflet": "^1.7.1"
     }
 }
