--- a/package.json
+++ b/package.json
@@ -23,5 +23,8 @@
         "sass-loader": "^11.0.1",
         "vue": "^3.0.11",
         "vue-loader": "^16.2.0"
+    },
+    "dependencies": {
+        "leaflet": "^1.7.1"
     }
 }
