--- a/package.json
+++ b/package.json
@@ -10,6 +10,7 @@
         "production": "mix --production"
     },
     "devDependencies": {
+        "@vue-leaflet/vue-leaflet": "^0.6.0",
         "@vue/compiler-sfc": "^3.0.11",
         "axios": "^0.21",
         "bootstrap": "^4.6.0",
