Revert "Webdesign login"
This reverts commit 6b4d57b006f3030b3b6ab070a75cfaddcfba7da4.

--- a/package.json
+++ b/package.json
@@ -23,8 +23,7 @@
         "sass": "^1.32.11",
         "sass-loader": "^11.0.1",
         "vue": "^3.0.11",
-        "vue-loader": "^16.2.0",
-        "webpackbar": "*"
+        "vue-loader": "^16.2.0"
     },
     "dependencies": {
         "leaflet": "^1.7.1"
