--- a/public/mix-manifest.json
+++ b/public/mix-manifest.json
@@ -1,6 +1,5 @@
 {
     "/js/app.js": "/js/app.js",
     "/js/vue.js": "/js/vue.js",
-    "/css/app.css": "/css/app.css",
-    "/css/all.css": "/css/all.css"
+    "/css/app.css": "/css/app.css"
 }
