--- a/.gitignore
+++ b/.gitignore
@@ -3,19 +3,19 @@ node_modules/
 npm-debug.log
 yarn-error.log
 public/js
-public/css
+public/js/app.js
+public/js/app.js
+public/css/all.css
 
 # Laravel 4 specific
 bootstrap/compiled.php
 app/storage/
 
 # Laravel 5 & Lumen specific
-public/storage
+!public/storage
 public/hot
 storage/*.key
 .env
 Homestead.yaml
 Homestead.json
 /.vagrant
-public/js/
-public/css/
