--- a/package.json
+++ b/package.json
@@ -26,6 +26,7 @@
         "vue-loader": "^16.2.0"
     },
     "dependencies": {
-        "leaflet": "^1.7.1"
+        "leaflet": "^1.7.1",
+        "vue-pannellum": "^0.5.3"
     }
 }
